# mondo

./: .env.example  .gitignore  CLAUDE.md  README.md  implementation-phase-1.md  monday-api.md  pyproject.toml
.claude/skills/docs-sync-audit/: SKILL.md
.claude/skills/issues-triage/: SKILL.md
.claude/skills/monday-api-watch/: SKILL.md  STATE.md
.claude/skills/mondo-usage-audit/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: batch-6-lazy-cli-imports.md  caching.md  help-system.md  implementation-phase-1.md  implementation-phase-2.md  implementation-phase-3.md  monday-api.md  output-contract-matrix.json  output-contract-matrix.md  plan.md  project codename mondo.md  refactor-plan.md  troubleshooting-installation.md
docs/superpowers/specs/: 2026-04-20-entity-directory-cache-design.md  2026-04-22-board-hierarchy-coverage-fix.md
scripts/: bench_directory_fetch.sh  generate_output_contract_matrix.py  install.ps1  release.sh  wire_epilogs.py
src/mondo/: __init__.py  __main__.py  docs.py  logging_.py  version.py
src/mondo/api/: auth.py  client.py  complexity.py  errors.py  pagination.py  polling.py  queries.py  selection.py
src/mondo/cache/: __init__.py  config.py  directory.py  fuzzy.py  paths.py  registry.py  store.py
src/mondo/cli/: _alias.py  _batch.py  _cache_flags.py  _cache_invalidate.py  _client_factory.py  _column_cache.py  _columns.py  (+57 more)
tests/: conftest.py
tests/integration/: __init__.py  _helpers.py  conftest.py  test_live_admin.py  test_live_boards.py  test_live_cache.py  test_live_column_types.py  test_live_doc_blocks.py  test_live_doc_column.py  test_live_doc_export_formats.py  test_live_doc_images.py  test_live_doc_md_roundtrip.py  test_live_doc_pdf.py  test_live_files.py  test_live_folders.py  test_live_groups.py  test_live_item_filter.py  test_live_item_ops.py  test_live_mirror.py  test_live_pm_board.py  test_live_readonly.py  test_live_subitems.py  test_live_updates.py  test_live_writes.py
tests/skill_eval/: _runner.py  conftest.py  test_skill_eval.py  trigger_eval.json
tests/unit/: conftest.py  test_argv_reorder.py  test_auth.py  test_batch.py  test_cache_config.py  test_cache_directory.py  test_cache_fuzzy.py  test_cache_provenance.py  test_cache_registry.py  test_cache_store.py  test_cli_3h.py  test_cli_3i.py  test_cli_auth.py  test_cli_board.py  test_cli_board_id_alias.py  test_cli_board_items_cache.py  test_cli_cache.py  test_cli_cache_paths.py  test_cli_cache_phase2.py  test_cli_cache_phase3.py  test_cli_cache_phase4.py  test_cli_cache_stale.py  test_cli_column.py  test_cli_column_doc.py  test_cli_confirm.py  test_cli_contracts.py  test_cli_dir_lookup.py  test_cli_doc.py  test_cli_doc_object_id.py  test_cli_emit_warning.py  test_cli_error_visibility.py  test_cli_errors.py  test_cli_export.py  test_cli_fields_option.py  test_cli_file.py  test_cli_filter_label_error.py  test_cli_filters.py  test_cli_globals.py  test_cli_graphql.py  test_cli_group.py  (+62 more)
(+95 files in other folders)
